send card catalogue file of both your own published cards and the git cards